[fix] change title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     ></script>
     <script src="https://unpkg.com/prop-types/prop-types.min.js" defer></script>
     <script src="https://unpkg.com/recharts/umd/Recharts.js" defer></script>
-    <title>CozaStores Dashboard</title>
+    <title>CozaStore Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
